--- a/practice/005-mi.com-anatomy/nav/nav.css
+++ b/practice/005-mi.com-anatomy/nav/nav.css
@@ -1,5 +1,13 @@
+* {
+    box-sizing: border-box;
+}
 body {
     margin: 0;
+}
+.container {
+    max-width: 900px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .row {
     font-size: 0;
@@ -17,6 +25,7 @@ body {
 } */
 .left, .right {
     width: 50%;
+    /* padding: 10px; */
 }
 .right {
     text-align: right;
@@ -24,6 +33,9 @@ body {
 .nav {
     background: rgba(0, 0, 0, .8)
 }
+/*更踏实的写法
+ .nav .left > a,
+.nav .right > a */
 .nav a {
     display: inline-block;
     padding: 10px 5px;
