--- a/practice/005-mi.com-anatomy/section/main.css
+++ b/practice/005-mi.com-anatomy/section/main.css
@@ -19,9 +19,9 @@
     background: #fff;
 }
 
-.card {
-    /*border: 1px solid rgba(0, 0, 0, .12);*/
-}
+/* .card {
+    border: 1px solid rgba(0, 0, 0, .12);
+} */
 
 .card {
     -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, .1);
