--- a/project/001-mi.com/view/page/order.html
+++ b/project/001-mi.com/view/page/order.html
@@ -1,8 +1,8 @@
-<link rel="stylesheet" href="../css/lib/normalize.css">
-<link rel="stylesheet" href="../css/common/global.css">
-<link rel="stylesheet" href="../css/component/nav.global.css">
-<link rel="stylesheet" href="../css/component/nav.page.css">
-<link rel="stylesheet" href="../css/page/order.css">
+<link rel="stylesheet" href="../../css/common/global.css">
+<link rel="stylesheet" href="../../css/lib/normalize.css">
+<link rel="stylesheet" href="../../css/component/nav.global.css">
+<link rel="stylesheet" href="../../css/component/nav.page.css">
+<link rel="stylesheet" href="../../css/page/order.css">
 
 <div class="row nav global">
   <div class="container">
@@ -20,9 +20,117 @@
     </div>
   </div>
 </div>
-
-<div class="content">
-  <h1>下单</h1>
+<div class="row nav page">
+  <div class="container">
+    <div class="col-lg-1 logo">
+      <div class="the-logo">
+      </div>
+    </div>
+    <div class="col-lg-8 link-group">
+      <a href="#">全部商品分类</a>
+      <a href="#">小米手机</a>
+      <a href="#">红米</a>
+      <a href="#">电视</a>
+      <a href="#">笔记本</a>
+      <a href="#">盒子</a>
+      <a href="#">新品</a>
+      <a href="#">路由器</a>
+      <a href="#">服务</a>
+    </div>
+    <div class="col-lg-3">
+    <form class="row search-bar">
+      <input type="search" class="col-lg-8" >
+      <button type="submit" class="col-lg-4">搜索</button>
+      <span class="rec-list">
+        <a href="#" class="rec">红米Note</a>
+        <a href="#" class="rec">Mix发布会</a>
+      </span>
+    </form>
+    </div>
+  </div>  
+</div>
+<div class="row order page">
+  <div class="container">
+    <div class="pro-title"></div>
+    <div class="col-lg-6">红米Note 5 AI 双摄</div>
+    <div class="col-lg-6">
+      <a href="#">概述</a>
+      <a href="#">参数</a>
+      <a href="#">F码通道</a>
+      <a href="#">用户评价</a>
+    </div>
+    <div class=" row tips">
+      <span>为方便您购买，请提前登录</span>
+      <a href="#">立即登录</a>
+    </div>
+    <div class=" row pro-content">
+      <div class="col-lg-6 pro-left">
+        <img  alt="红米note5">
+      </div>
+      <div class="col-lg-6 pro-right">
+        <div class="text">
+          <div class="title">红米Note 5 AI 双摄</div>
+          <div class="desc">「4月3日早10点开售」骁龙636 八核处理器 / 1.4μm大像素 AI 双摄 / 1300万柔光自拍 / 最高可选6GB大内存 / 4000mAh 大电量 / 5.99" 18:9 全面屏 / 人脸解锁</div>
+          <span>1699元</span>
+        </div>
+        <div class="row main-price">
+          <div>
+          <div class="col-lg-6">限时预约</div>
+          <div class="col-lg-6">剩 3 天 12 时 31 分 48 秒</div>
+          </div>
+          <div class="col-">￥1699</div>
+        </div>
+        <div class="address">
+          <div>
+              北京北京市东城区永定门外街道 修改</div>
+          <div>该地区暂时缺货</div>
+        </div>
+        <div class="version">
+          <div>
+            <div class="col-lg-6">选择版本</div>
+            <div class="col-lg-6"></div>
+          </div>
+          <form  class="row">
+            <button class="col-lg-6">6GB+64GB 1699元</button>
+            <button class="col-lg-6">6GB+64GB 1699元</button>
+            <button class="col-lg-6">6GB+64GB 1699元</button>
+          </form>
+        </div>
+        <div class="color">
+          <div>
+              <div class="col-lg-6">选择颜色</div>
+              <div class="col-lg-6"></div>
+          </div>
+           <form  class="row">
+            <button class="col-lg-6"> 金色</button>
+            <button class="col-lg-6"> 金色</button>
+            <button class="col-lg-6"> 金色</button>
+            <button class="col-lg-6"> 金色</button>
+          </form>
+        </div>
+        <div class="row Security service">
+          <div>
+              <div class="col-lg-6">选择小米提供的保障服务</div>
+              <div class="col-lg-6">了解保障服务 ></div>
+          </div>
+          <div class="col-">
+            <div>意外保障服务</div>
+            <div>红米Note 5 意外保障服务</div>
+            <div>我已阅读 服务条款| 常见问题</div>
+          </div>
+        </div>
+        <div class="reference">
+          <div class="row">
+          <div class="col-lg-6">红米Note 5 6GB+64GB 金色</div>
+          <div class="col-lg-6">1699元</div>
+          </div>
+          <div>总计 ：1699元</div>
+        </div>
+        <button>立即预约</button>
+        <div> 支持7天无理由退货</div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <footer></footer>
