表哥打开project/001/view/page/orderhtml

--- a/project/001-mi.com/view/page/order.html
+++ b/project/001-mi.com/view/page/order.html
@@ -127,7 +127,7 @@
           <div>总计 ：1699元</div>
         </div>
         <button>立即预约</button>
-        <div> 支持7天无理由退货</div>
+        <div>支持7天无理由退货</div>
       </div>
     </div>
   </div>
