--- a/project/001-mi.com/view/page/login.html
+++ b/project/001-mi.com/view/page/login.html
@@ -1,27 +1,38 @@
-<link rel="stylesheet" href="../css/lib/normalize.css">
-<link rel="stylesheet" href="../css/common/global.css">
-<link rel="stylesheet" href="../css/page/login.css">
-<link rel="stylesheet" href="../css/component/nav.global.css">
+<link rel="stylesheet" href="../../css/lib/normalize.css">
+<link rel="stylesheet" href="../../css/common/global.css">
+<link rel="stylesheet" href="../../css/page/login.css">
+<link rel="stylesheet" href="../../css/component/nav.global.css">
 
-<div class="row nav global">
+<div class="row top">
   <div class="container">
-    <div class="col-lg-6 left">
-      <a href="#">Item</a>
-      <a href="#">Item</a>
-      <a href="#">Item</a>
-      <a href="#">Item</a>
-      <a href="#">Item</a>
-      <a href="#">Item</a>
-    </div>
-    <div class="col-lg-6 right">
-      <a href="#">Item</a>
-      <a href="#">Item</a>
-    </div>
+    <img src="../../img/mistore_logo.png" alt="mimimi">
   </div>
 </div>
-<div class="content">
-  <h1>登录</h1>
+<div class="row middle">
+    <div class="container">
+  <div class="login-form">
+    <div class="smallcontainer">
+    <div class="first-row">
+      <a class="col-" href="#">账号登录</a>
+      <span class="col-">|</span>
+      <a class="col-" href="#">扫码登录</a>
+    </div>
+    <div class="account-wrapper">
+    <input class="col- account" type="text" placeholder="邮箱/手机账号/小米ID">
+    </div>
+    <div class="password-wrapper">
+    <input class="col- password" type="password" placeholder="密码">
+    </div>
+    <div class="button-wrapper">
+    <button class="col- button">登录</button>
+    </div>
+    <div class="last-row">
+        <a class="col-" href="#">手机短信登录/注册</a>
+        <a class="col-" href="#"> 立即注册 | 忘记密码？</a>
+    </div>
+    <div></div>
+  </div>
+  </div>
+  </div>
 </div>
-
-<div class="footer">
-</div>
+<div class="footer"></div>
