--- a/project/001-mi.com/view/page/order.html
+++ b/project/001-mi.com/view/page/order.html
@@ -51,34 +51,38 @@
 </div>
 <div class="row order page">
   <div class="container">
-    <div class="pro-title"></div>
-    <div class="col-lg-6">红米Note 5 AI 双摄</div>
-    <div class="col-lg-6">
+    <div class="pro-title">
+    <div class="col-lg-6 left">红米Note 5 AI 双摄</div>
+    <div class="col-lg-6 right">
       <a href="#">概述</a>
       <a href="#">参数</a>
       <a href="#">F码通道</a>
       <a href="#">用户评价</a>
     </div>
+    </div>
     <div class=" row tips">
+      <div class="col-">
       <span>为方便您购买，请提前登录</span>
       <a href="#">立即登录</a>
+      </div>
     </div>
     <div class=" row pro-content">
       <div class="col-lg-6 pro-left">
-        <img  alt="红米note5">
+        <img  alt="红米note5" src="../../img/hongminote5.jpg">
       </div>
       <div class="col-lg-6 pro-right">
         <div class="text">
           <div class="title">红米Note 5 AI 双摄</div>
-          <div class="desc">「4月3日早10点开售」骁龙636 八核处理器 / 1.4μm大像素 AI 双摄 / 1300万柔光自拍 / 最高可选6GB大内存 / 4000mAh 大电量 / 5.99" 18:9 全面屏 / 人脸解锁</div>
-          <span>1699元</span>
+          <div class="desc"><span>「4月3日早10点开售」</span>
+            骁龙636 八核处理器 / 1.4μm大像素 AI 双摄 / 1300万柔光自拍 / 最高可选6GB大内存 / 4000mAh 大电量 / 5.99" 18:9 全面屏 / 人脸解锁</div>
+          <span class="small-price">1699元</span>
         </div>
         <div class="row main-price">
-          <div>
-          <div class="col-lg-6">限时预约</div>
-          <div class="col-lg-6">剩 3 天 12 时 31 分 48 秒</div>
+          <div class="first-line">
+          <div class="col-lg-6 left">限时预约</div>
+          <div class="col-lg-6 right">剩 3 天 12 时 31 分 48 秒</div>
           </div>
-          <div class="col-">￥1699</div>
+          <div class="col- big-price">￥1699</div>
         </div>
         <div class="address">
           <div>
@@ -87,26 +91,41 @@
         </div>
         <div class="version">
           <div>
-            <div class="col-lg-6">选择版本</div>
-            <div class="col-lg-6"></div>
+            <div class="col-lg-6 left">选择版本</div>
+            <div class="col-lg-6 right"></div>
           </div>
-          <form  class="row">
-            <button class="col-lg-6">6GB+64GB 1699元</button>
-            <button class="col-lg-6">6GB+64GB 1699元</button>
-            <button class="col-lg-6">6GB+64GB 1699元</button>
-          </form>
+          <div  class="row">
+            <div class="col-lg-6">
+              <a href="#" class="card">
+              <span class="version-name">6GB+64GB</span>
+              <span class="version-price">1699元</span>
+              </a>
+            </div>
+          <div class="col-lg-6">
+              <a href="#" class="card">
+              <span class="version-name">6GB+64GB</span>
+              <span class="version-price">1699元</span>
+              </a>
+            </div>
+           <div class="col-lg-6">
+              <a href="#" class="card">
+              <span class="version-name">6GB+64GB</span>
+              <span class="version-price">1699元</span>
+              </a>
+            </div>
+          </div>
         </div>
         <div class="color">
           <div>
               <div class="col-lg-6">选择颜色</div>
               <div class="col-lg-6"></div>
           </div>
-           <form  class="row">
+           <div  class="row">
             <button class="col-lg-6"> 金色</button>
             <button class="col-lg-6"> 金色</button>
             <button class="col-lg-6"> 金色</button>
             <button class="col-lg-6"> 金色</button>
-          </form>
+           </div>
         </div>
         <div class="row Security service">
           <div>
