--- a/project/001-mi.com/view/page/order.html
+++ b/project/001-mi.com/view/page/order.html
@@ -7,16 +7,20 @@
 <div class="row nav global">
   <div class="container">
     <div class="col-lg-6 left">
-      <a href="#">Item</a>
-      <a href="#">Item</a>
-      <a href="#">Item</a>
-      <a href="#">Item</a>
-      <a href="#">Item</a>
-      <a href="#">Item</a>
+      <a href="#">小米商城</a>
+      <a href="#">MIUI</a>
+      <a href="#">LoT</a>
+      <a href="#">云服务</a>
+      <a href="#">水滴</a>
+      <a href="#">金融</a>
+      <a href="#">有品</a>
+      <a href="#">Select Region</a>
     </div>
     <div class="col-lg-6 right">
-      <a href="#">Item</a>
-      <a href="#">Item</a>
+      <a href="#">登录</a>
+      <a href="#">注册</a>
+      <a href="#">消息通知</a>
+      <a href="#">购物车</a>
     </div>
   </div>
 </div>
