--- a/practice/028-resume/css/main.css
+++ b/practice/028-resume/css/main.css
@@ -1,9 +1,17 @@
-
+body {
+    background: url(../img/event_background.png);
+}
+h1 {
+    margin-top: 50px;
+    padding-top: 50px;
+}
 .container {
     max-width: 900px;
     margin-left: auto;
     margin-right: auto;
-    background: #eee;
+    background: #FCFAF2;
+    padding-left: 10px;
+    box-shadow: 2px 3px 10px 5px #ddd;
 }
 .header {
     text-align: center;
