--- a/project/002-resume/css/main.css
+++ b/project/002-resume/css/main.css
@@ -12,6 +12,7 @@ body {
     padding-top: 40px;
     box-shadow: 2px 3px 10px 5px #ddd;
     margin-top: 40px;
+    margin-bottom: 40px;
     transition: all 3000ms;
 }
 .max-container:hover {
